--- a/Graphics/D3D12.md
+++ b/Graphics/D3D12.md
@@ -1,4 +1,9 @@
+## Learning Resource
+
+- https://devblogs.microsoft.com/directx/landing-page/
+
 # 为什么Direct3D 12会更快更高效
+
 - D3D12提供了比D3D11更底层的硬件抽象。
 - 编程难度更大，需要自己实现内存管理等。
 - 极大降低了CPU开销
